added cisco, oracle

--- a/index.html
+++ b/index.html
@@ -103,15 +103,13 @@
 							<div class="text-box">
 								<h1> About Me </h1>
 								<p>
-									My name is Kiran Misner and I am a junior at Tufts University studying Computer Science originally from Palo Alto, California.
+									My name is Kiran Misner and I am currently a software engineer at Cisco Meraki based in New York City. I have 2 years experience working full-stack, working with modern technologies and following industry best practices.
 								</p>
 								<p> 
-									Along with my academics, I'm a Teaching Assistant for Tufts' Data Structures course – COMP15. 
-									I also am working as a software developer at Tufts JumboCode and as a project manager for The Village Method's collaboration with 
-									Tufts University's Code for Good program.
+									Outside of work, I can be found trying out new restaurants, rooting on the San Francisco 49ers, and spending time with friends and family.
 								</p>
 								<p>
-									My main hobbies include batting & bowling on Tufts Club Cricket team, playing video games with my friends, and finding new food to eat.
+									Feel free to reach out via email at kiran.misner@gmail.com
 								</p> 
 							</div>
 							<div class="bts">
@@ -129,24 +127,31 @@
 					<div class="titles">
 						<div class="title">Work Experience</div>
 					</div>
-					<!-- <div class="filters">
-						<div class="f_btn active">
-							<label><input type="radio" name="fl_radio" value="box-item" />All</label>
-						</div>
-						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-branding" />Branding</label>
-						</div>
-						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-mockups" />Mockups</label>
-						</div>
-						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-ui" />UI Kits</label>
-						</div>
-						<div class="f_btn">
-							<label><input type="radio" name="fl_radio" value="f-photo" />Photography</label>
-						</div> -->
-					<!-- </div> -->
 					<div class="row blog-items">
+						<div class="col col-m-12 col-t-4 col-d-4">
+							<div class="blog-item">
+								<div class="image">
+									<a><img src="images/meraki.png" alt="" /></a>
+								</div>
+								<a class="name"> Software Engineer at Cisco Meraki </a>
+								<p> Worked as a fullstack software engineer on Systems Manager, Cisco Meraki's mobile device management solution. Did everything from building new UI components, creating services at scale, and writing documentation – all while learning best practices and patterns.
+								</p>
+								<div class="date">June 2022 – Present </div>
+							</div>
+						</div>
+
+						<div class="col col-m-12 col-t-4 col-d-4">
+							<div class="blog-item">
+								<div class="image">
+									<a><img src="images/cerner.png" alt="" /></a>
+								</div>
+								<a class="name"> Software Engineering Intern at Oracle Corporation (Cerner) </a>
+								<p>
+									Interned at the Bear Institute at Oracle Cerner turning my academic experience into industry experience, stressing the importance of testing frameworks like Jest and RSpec.
+								</p>
+								<div class="date">June 2022 – Present </div>
+							</div>
+						</div>
 						<div class="col col-m-12 col-t-4 col-d-4">
 							<div class="blog-item">
 								<div class="image">
@@ -160,6 +165,12 @@
 								<div class="date">July 2020 - Decemeber 2020 </div>
 							</div>
 						</div>
+					</div>
+
+
+
+
+					<div class="row blog-items">
 						<div class="col col-m-12 col-t-4 col-d-4">
 							<div class="blog-item">
 								<div class="image">
