update profile photo and resume

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div class="row">
 						<div class="col col-m-12 col-t-4 col-d-4">
 							<div class="profile">
-								<img src="images/fbprofilepic.jpg" alt="" />
+								<img src="images/profilepicture.jpeg" alt="" />
 							</div>
 						</div>
 						<div class="col col-m-12 col-t-8 col-d-8">
